--- a/boomboxclient/src/App.css
+++ b/boomboxclient/src/App.css
@@ -1,8 +1,11 @@
 .App {
   text-align: center;
   position: relative;
-  min-height: 100%;
+  height: 100vh;
   width: 100%;
+  /* overflow: hidden; */
+  /* background-color: yellow; */
+    
 }
 .header {
   background-color: black;
