--- a/boomboxclient/src/App.css
+++ b/boomboxclient/src/App.css
@@ -1,30 +1,42 @@
+@import url('https://fonts.googleapis.com/css?family=Megrim');
+
 .App {
   text-align: center;
   position: relative;
   height: 100vh;
-  width: 100%;
+  /* width: 100%; */
   /* overflow: hidden; */
   /* background-color: yellow; */
     
 }
-.header {
+li{
+  display: inline;
+}
+h1{
+  font-family: 'Megrim', cursive;
+  font-weight: 600;
+  font-size: 75px;
+  width: 50%;
+  margin: 0 auto;
+}
+.iconApp{
+  color: rgb(18, 107, 39);
+}
+/* .header {
   background-color: black;
   width: 100%;
   margin: 0;
   height: 115px;
   color: white;
-  /* vertical-align: middle;
-  text-align: center; */
+  
   position: relative;
   
-}
-.navLinks {
+} */
+/* .navLinks {
   list-style-type: none;
-  display: flex;
   margin: 0 auto;
 }
 .links{
-  align-self: center;
+   align-self: center; 
   width: 100%;
-  display: inline-block;
-}
+} */
