--- a/boomboxclient/src/App.css
+++ b/boomboxclient/src/App.css
@@ -1,4 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Megrim');
+@import url('https://fonts.googleapis.com/css?family=Yeseva+One');
+@import url('https://fonts.googleapis.com/css?family=Playfair+Display');
+
+
 
 .App {
   text-align: center;
@@ -13,14 +17,17 @@ li{
   display: inline;
 }
 h1{
-  font-family: 'Megrim', cursive;
-  font-weight: 600;
-  font-size: 75px;
-  width: 50%;
-  margin: 0 auto;
+  font-family: 'Yeseva One', cursive;
+  color: rgb(126, 126, 190);
+  text-align: center;
+  font-size: 100px;
 }
 .iconApp{
-  color: rgb(18, 107, 39);
+  color: rgb(126, 126, 190);
+}
+.iconApp:hover{
+  text-decoration: none;
+  color: rgb(104, 104, 153); 
 }
 /* .header {
   background-color: black;
