--- a/boomboxclient/src/Explore.css
+++ b/boomboxclient/src/Explore.css
@@ -1,6 +1,14 @@
+@import url('https://fonts.googleapis.com/css?family=Yeseva+One');
 .Save{
     width: 100%;
     height: 100%;
     overflow: scroll;
     
+}
+
+h2 {
+    text-align: center;
+  font-family: 'Yeseva One', cursive;
+  font-size: 40px;
+  color: rgb(126, 126, 190);
 }
